--- a/application/views/jquery/test.html
+++ b/application/views/jquery/test.html
@@ -1,10 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>Test Your Own Machine</title>
   </head>
   <body>
-    <<h1>Testing...</h1>
+    <p>How are you</p>
   </body>
 </html>
